--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div id='titleBox'>
             
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/84/Jollibee_2011_logo.svg/220px-Jollibee_2011_logo.svg.png" alt="Jollibee">
+            <img id='bee' src="https://upload.wikimedia.org/wikipedia/en/thumb/8/84/Jollibee_2011_logo.svg/220px-Jollibee_2011_logo.svg.png" alt="Jollibee">
     </div>
     <h1></h1>
     <div id="register">
